--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -12,9 +12,38 @@
     />
   </head>
   <body>
-    <h1>Hello . I learn EJS --- kkkkk</h1>
-    <!-- <img src="/images/image.png" alt="Images" /> -->
-    <a class="btn btn-warning" href="/create-user">Create a new user</a>
+    <div style="margin: 25;">
+      <div style="display: flex; justify-content: space-between; align-items: center">
+        <h1>List Users  </h1>
+        <div>
+           <a class="btn btn-warning" href="/create-user">Create a new user</a>
+        </div>
+    </div>
+    <hr>
+    <table class="table table-hover table-bordered">
+<thead>
+    <th>ID</th>
+    <th>Name</th>
+    <th>Email</th>
+    <th>Address</th>
+    <th>Action</th>
+  </thead>
+  <tbody>
+    <% users.forEach(function (user) { %>
+    <tr>
+    <td><%= user.id %></td>
+    <td><%= user.name %></td>
+    <td><%= user.email %></td>
+    <td><%= user.address %></td>
+    <td><button class="btn btn-danger">Delete</button></td>
+    </tr>
+    <%}) %>
+    
+  </tbody>
+ 
+    </table>
+    </div>
+
     <!-- script -->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   </body>
