--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -35,7 +35,11 @@
     <td><%= user.name %></td>
     <td><%= user.email %></td>
     <td><%= user.address %></td>
-    <td><button class="btn btn-danger">Delete</button></td>
+    <td>
+      <form action="/handle-delete-user/<%= user.id %>" method="post">
+        <button type="submit" class="btn btn-danger">Delete <%= user.id %> </button>
+      </form>
+      </td>
     </tr>
     <%}) %>
     
